--- a/VRChat/07/1079707.html
+++ b/VRChat/07/1079707.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "opBilWQdszibcw9OCuHnuA9uFhs2blJYejFzvCFUN+w="></script>
+    "m6eNL4q/ajx5bPJa6XjE4yaK9i7x5eHj9OTwoemI4ys="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け3D小物モデル 「武威亜流茶屠の旗」","description":"VRchatでの汎用性の高さを考慮しシンプルに仕上げたちょっとアレな旗です。お正月の早朝なんかにでも使ってみてね！もちろん無料配布です！\n\n・個人の持ち物として！\n・ワールドの置物として！\n・ハンドルの高いバイクにもデコって夜明けの首都高を爆走しよう！\n\n==セット内容==\nVRchat向け3D小物モデル\n「武威亜流茶屠の旗」(ポリゴン数:204)\n\n以上のUnityPackage、blendファイル\n===============\n\n＜＜利用規約＞＞　10/23より適用\nオリジナル3D小物モデル『武威亜流茶屠の旗』\n製作者：カノエ・オトリ　（twitterID:kanoeotori_vr）\n\n本モデルを購入、もしくはダウンロードした時点で本利用規約に同意したものとします。\n本規約は変更することがあり、最新のものを適用するものとします。\n本規約に記載のない事項に関しては必ず製作者へご一報願います。未記載の事柄は原則禁止事項にあたるものとします。\n\n・禁止事項\n\n本ファイルの内容物を第三者に譲渡、販売する行為、その他二次配布をする行為を全面的に禁止します。\nまた本ファイルの内容物を第三者が利用できる状態にする行為、特にVRchatではペデスタルによる第三者がアバター使用を可能な状態にすることを禁止します。\n\n製作者が不利益を被る、また本ファイルの配布・販売に著しく悪影響を与える行為を禁止します。\n製作者を偽る行為や名乗る行為、また書き換える行為を禁止します。\n\n特定個人・団体・宗教・政治・組織への誹謗中傷のための利用を禁止します。\n\n\n・認可事項\n\n本ファイルの内容物を用いたVRchatをはじめとしたアバターとしての使用が可能なサービスへの利用、動画配信、商用活動やVtuber活動を行うことを認めます。\n\nR18表現を含んだ内容に利用することを認めますが、他人の迷惑にならないようご利用ください。\n\nこのモデルを改変、もしくはモデルの全部及び一部分を他種のモデルの改変のために移植することを認めます。\n移植する際は他種のモデルに適用された利用規約に則した利用方法を遵守し、また良識を持って行ってください。\n\n\n・そのほか\n\n本ファイルの内容物を使用したことにより生じた何らかの不都合・不利益・損失・トラブルに対して製作者は一切責任を負わないものとします。\n\n本ファイルの内容物とこれを利用した改変データの著作権は大元の製作者である　カノエ・オトリ　が有するものとします。\n\nよろしければとても気になるので本ファイルの内容物を利用した作品・活動を製作者までご一報頂けると大変嬉しいです。","url":"https://booth.pm/ja/items/1079707","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/db7be2ab-47ce-4a23-bd12-a675ac64c8b0/i/1079707/075b07f4-9d88-4312-9fb1-f90baaae390d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="opBilWQdszibcw9OCuHnuA9uFhs2blJYejFzvCFUN+w="></script>
+    nonce="m6eNL4q/ajx5bPJa6XjE4yaK9i7x5eHj9OTwoemI4ys="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      140
+                                      141
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      140
+                                      141
                                     </div>
                                   </div></a>
                                 </div>
@@ -361,9 +361,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
