--- a/VRChat/91/1078191.html
+++ b/VRChat/91/1078191.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "McafldOruY27MfJc42esQn5Ij984at5PCVLYLQsTXsM="></script>
+    "Ko/t8HibAOxH577ribjE/BfU0sOZFwzJzdx6EtqlbPc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル「Livaiathan Type.A」Ver1.0  +他3種","description":"超蔟式オリジナルモデル第2弾。\nLivaiathan。TypeA、TypeA-2、TypeDとその試作機を提供します。\n\nVRChat想定で制作されていますが配信、ゲームコンテンツなどに収益化状態を問わず運用可能です。\n\n試作機を覗いてVRCでのフルトラッキング確認済み。\n\n改変及び商用利用も可能。\n素体、パーツを他のアバターへ使用することも許可しています。\n\n\nモデル、テクスチャーの再配布、販売は改変の有無を問わず禁止です。\n特定個人や団体への中傷を目的とした利用も当然ながら禁止します。\n\n詳しくは後述の利用規約を参照。\n\n\n","url":"https://booth.pm/ja/items/1078191","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/1078191/29c4a6e7-18f0-49e9-84bf-ac017190df86_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="McafldOruY27MfJc42esQn5Ij984at5PCVLYLQsTXsM="></script>
+    nonce="Ko/t8HibAOxH577ribjE/BfU0sOZFwzJzdx6EtqlbPc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -537,9 +537,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
