--- a/VRChat/14/1077614.html
+++ b/VRChat/14/1077614.html
@@ -104,7 +104,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "lxl+OVFenb1CkQrzg6wFUqvU4MLRZtFuStmJ3QHHYu4="></script>
+    "aUGPWK3tFFCkkUNPB3O9UEm5OABoAuqZEdPhjy2G/cY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"短刀「灰氷」","description":"VRChat向けの３D武器モデルデータです。\n北方の民族風の文様を施した短刀で、狩りの場面から儀式までなんでも使えます。\n\n△ポリゴン３４４と低ポリですが、こだわった刃紋のテクスチャなど見所がいっぱいです！\n\nver1.1\n鞘をUnityだけで表示非表示できない不具合を解消","url":"https://booth.pm/ja/items/1077614","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1077614/809a4bf0-4f82-481b-aa71-c2c2a881b997_base_resized.jpg"}
     </script>
@@ -115,7 +115,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lxl+OVFenb1CkQrzg6wFUqvU4MLRZtFuStmJ3QHHYu4="></script>
+    nonce="aUGPWK3tFFCkkUNPB3O9UEm5OABoAuqZEdPhjy2G/cY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -454,9 +454,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
