--- a/VRChat/38/1077438.html
+++ b/VRChat/38/1077438.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "sip/IqQEA2Y5wS+pRZJqTI1mEG0YWxqK0vbNJNJ7qf4="></script>
+    "e9A0My/wVvOumprDdWNVU1pvL4ezkdWHrKBQjcgZYlk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"旗　3Dモデル","description":"旗(Flag) 3Dモデルの紹介\n\n\n本モデルは【VRChat】向けに作成した旗です。\n何かを宣伝したい方、応援したい方など使い道はいろいろあると思います。\n\nぜひ使ってやってください。\n(使用の際は装飾を回したり、旗部分を布設定がついたFlag_fullをお使いください。)\n\n\n●内容物\n\n・Flag.unitypackage\n・FBXデータ,Blenderファイル,UVファイル(png)\n・画像資料\n・Readme\n\n\n------------------------------\n\n●利用条件\n\n・本モデルの営利利用目的は可\n・本モデルの改変は可\n\n\n●免責事項\n\n・本データを使用し、何れかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n\n\n■禁止事項\n\n・公序良俗に反する行為、政治・宗教活動、誹謗中傷目的での使用\n\n------------------------------\n\n貧相なモデルですが使っていただければ嬉しく思います。\n\n何かあれば下記までご連絡ください。\nTwitter:ケーキ@VRChatter(@keiki002)\nhttps://twitter.com/keiki002","url":"https://booth.pm/ja/items/1077438","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/266c358f-8e7e-41bc-bd4e-a1da54b572e7/i/1077438/6061a91a-eea2-4657-85c4-7297724d16bb_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sip/IqQEA2Y5wS+pRZJqTI1mEG0YWxqK0vbNJNJ7qf4="></script>
+    nonce="e9A0My/wVvOumprDdWNVU1pvL4ezkdWHrKBQjcgZYlk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -481,9 +481,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
