--- a/VRChat/55/1076755.html
+++ b/VRChat/55/1076755.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "FhRkVZhRbGzL5vHNqOTFgs0xvpWB9ktHjyJdJi3QNuI="></script>
+    "XPgwZGpswi6HK4H7+NJFagnXHUc5cZM0d0bpaN7GKKY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「ヤギコ」","description":"【お知らせ】\n購入者のうち一部の方がアップデートバージョンを受け取ることができない状態になっております。お手数ですが新しく追加した再購入用のバリエーションからDLをお願いします。内容は通常版と同一の状態です。\nまた、アバターを未購入の方も無料版からDLできますのでご自由にどうぞ。\n\n■モデル説明\n本モデルはHumanoid形式のオリジナル３Dモデル『ヤギコ』です。\nVRchatでの使用を想定しています。\n\n郵便屋さんのヤギの女の子です。\n\n\nフルボディトラッキングでの動作は確認しておりません\nLip Sync：20種（VRchat標準+MMD標準）\nシェイプキー（一部名称はMMD形式に倣っています）\nEyeTracking対応\nDynamic Bone対応（前髪、おさげ、耳、尻尾、スカート）\n","url":"https://booth.pm/ja/items/1076755","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"800"},"image":"https://booth.pximg.net/c/620x620/c0f46913-ee1e-4dbc-813f-7145553a5b74/i/1076755/8b006431-e494-4aaa-b59a-0b31ea77eb26_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FhRkVZhRbGzL5vHNqOTFgs0xvpWB9ktHjyJdJi3QNuI="></script>
+    nonce="XPgwZGpswi6HK4H7+NJFagnXHUc5cZM0d0bpaN7GKKY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -635,9 +635,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
