--- a/VRChat/18/1076918.html
+++ b/VRChat/18/1076918.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "OUBeS3o0G62BAVsUpkfnqZb9PPy1sGbCiKPWxXL8ONw="></script>
+    "FHSWH7rDduvDvXxayrLEhi8f53oaZ3bfSTccNRL1W6Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"武器/装備セット4","description":"■VRChat向けの武器セット第4弾\n・X/EMGL-01A（電磁加速ガンランチャー）\n試作型の電磁加速方式を用いたガンランチャー(砲/発射器複合装備)。\n\n・グレネード・ライフル(突撃型自動擲弾砲)\n大口径榴弾を発射可能な自動砲。レバー・アクション用のアーム付き\n\n・EMパイルバンカー\n電磁加速によって杭を打ち出す近接戦闘装備。\n\n・多目的ミサイル・ランチャー/統合多目的ミサイル\n汎用ミサイル・システム。ミサイルランチャーを連結可能。ランチャー内のミサイルは見た目用のダミー（非表示にできます）。\n射出後を再現するためのミサイルが付属。ミサイルの外装部分は展開して安定翼になります\n\n・CIWS-01D(近接戦闘用高周波ナイフ)\nナイフタイプの高周波ブレード。鞘が付属します\n\n・ディスク・レドーム\n複合センサーと高性能レーダーを統合したオプション装備。レドーム部分は回転させられます\n\n・スタビライザー・ウィング\n可動式アームを備えた安定翼ユニット。\n\n　UTS2.0対応(Packageを使用する際は予めUTS2.0を入れてください) Packageを導入することでマテリアル設定済になったものが取り込めます\n\n■ポリゴン数\nX/EMGL-01A：1,782\nグレネード・ライフル：1,786\nEMパイルバンカー：1,154\n多目的ミサイルランチャー：491\n多目的ミサイル：1,112\nCIWS-01D(本体)：352\nCIWS-01D(鞘)：260\nディスク・レドーム：1,220\nスタビライザー・ウィング：1,004　\n　(ポリゴン数が多いためAnimation Overrideでの表示を推奨します)\n\n■禁止事項：再配布、自作発言","url":"https://booth.pm/ja/items/1076918","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4c0b8e4e-23ce-4b6b-91ae-c803cad67328/i/1076918/1e7280c0-9d62-4bdf-af74-721182e437c6_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OUBeS3o0G62BAVsUpkfnqZb9PPy1sGbCiKPWxXL8ONw="></script>
+    nonce="FHSWH7rDduvDvXxayrLEhi8f53oaZ3bfSTccNRL1W6Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -437,9 +437,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
